# mx-sdk-rs-0.39.5-test

./: README.md  build-wasm.sh  clean-wasm.sh  meta-run-all.sh  publish.sh
contracts/benchmarks/mappers/queue-repeat/: Cargo.toml
contracts/benchmarks/send-tx-repeat/: Cargo.toml
contracts/benchmarks/send-tx-repeat/meta/: Cargo.toml
contracts/benchmarks/send-tx-repeat/src/: send_tx_repeat.rs
contracts/benchmarks/send-tx-repeat/tests/: scenario_go_test.rs  scenario_rs_test.rs
contracts/benchmarks/send-tx-repeat/wasm/: Cargo.toml
contracts/core/wrewa-swap/: Cargo.toml
contracts/core/wrewa-swap/interaction/: snippets.sh
contracts/core/wrewa-swap/meta/: Cargo.toml
contracts/core/wrewa-swap/scenarios/: unwrap_rewa.scen.json  wrap_rewa.scen.json
contracts/core/wrewa-swap/src/: wrewa.rs
contracts/core/wrewa-swap/tests/: scenario_go_test.rs
contracts/core/wrewa-swap/wasm/: Cargo.toml
contracts/examples/dcdt-transfer-with-fee/: Cargo.toml
contracts/examples/dcdt-transfer-with-fee/meta/: Cargo.toml
contracts/examples/dcdt-transfer-with-fee/src/: dcdt_transfer_with_fee.rs  fee.rs
contracts/examples/dcdt-transfer-with-fee/tests/: dcdt_transfer_with_fee_scenario_go_test.rs  dcdt_transfer_with_fee_scenario_rs_test.rs
contracts/examples/dcdt-transfer-with-fee/wasm/: Cargo.toml
contracts/examples/digital-cash/: Cargo.toml
contracts/examples/digital-cash/meta/: Cargo.toml
contracts/examples/digital-cash/src/: deposit_info.rs  digital_cash.rs
contracts/examples/digital-cash/tests/: digital_cash_scenario_go_test.rs  digital_cash_scenario_rs_test.rs
contracts/examples/digital-cash/wasm/: Cargo.toml
contracts/examples/fractional-nfts/: Cargo.toml
contracts/examples/fractional-nfts/meta/: Cargo.toml
contracts/examples/multisig/: Cargo.toml
contracts/examples/nft-storage-prepay/: Cargo.toml
contracts/examples/proxy-pause/: Cargo.toml
contracts/examples/token-release/: Cargo.toml
contracts/feature-tests/abi-tester/: Cargo.toml  abi_tester_expected_main.abi.json  abi_tester_expected_view.abi.json
contracts/feature-tests/alloc-features/: Cargo.toml
contracts/feature-tests/basic-features/: Cargo.toml
contracts/feature-tests/big-float-features/: Cargo.toml
contracts/feature-tests/composability/: Cargo.toml
contracts/feature-tests/dcdt-system-sc-mock/: Cargo.toml
contracts/feature-tests/rust-testing-framework-tester/: Cargo.toml
contracts/feature-tests/use-module/: Cargo.toml  use_module_expected_main.abi.json  use_module_expected_view.abi.json
contracts/modules/: Cargo.toml  README.md
contracts/modules/src/: claim_developer_rewards.rs  dcdt.rs  default_issue_callbacks.rs  dns.rs  features.rs  ongoing_operation.rs  only_admin.rs  pause.rs  staking.rs  transfer_role_proxy.rs  users.rs
framework/base/: Cargo.toml  README.md
framework/base/src/: external_view_contract.rs  lib.rs  macros.rs
framework/base/tests/: formatter_test.rs
framework/codec/: Cargo.toml  README.md
framework/codec-derive/: Cargo.toml  README.md
framework/codec/src/: lib.rs
framework/codec/tests/: derive_empty_struct_test.rs  derive_enum_or_default_test.rs  derive_enum_test.rs  derive_enum_tricky_defaults_fieldless_test.rs  derive_enum_tricky_defaults_test.rs  derive_hygiene.rs  derive_struct_or_default_generic_test.rs  derive_struct_or_default_test.rs  derive_struct_test.rs  derive_struct_with_generic_test.rs  derive_tuple_struct_test.rs  explicit_impl_enum.rs  explicit_impl_struct.rs  explicit_impl_wrapped_array.rs
framework/derive/: Cargo.toml
framework/derive/src/: contract_impl.rs  macro_proxy.rs  managed_vec_item_derive.rs  type_abi_derive.rs
framework/scenario/: Cargo.toml  README.md
framework/scenario/src/: lib.rs  scenario_rs_runner.rs
framework/scenario/tests/: path_test.rs  scenarios_io_test.rs  scenarios_self_test.rs  token_identifier_test.rs
framework/snippets/: Cargo.toml  README.md
framework/snippets/src/: interactor.rs  interactor_dns.rs  interactor_result.rs  interactor_retrieve.rs  interactor_sc_call.rs  interactor_sc_deploy.rs  interactor_sender.rs  interactor_vm_query.rs  lib.rs
framework/wasm-adapter/: Cargo.toml  README.md
framework/wasm-adapter/src/: lib.rs  wasm_deps.rs  wasm_macros.rs
sdk/scenario-format/: Cargo.toml  README.md
sdk/scenario-format/tests/: interpreter_test.rs
tools/drtpy-snippet-generator/: Cargo.toml
tools/drtpy-snippet-generator/src/: cmd_builder.rs  drtpy_snippet_generator.rs  helper_types.rs
vm/: Cargo.toml
vm/src/: bech32.rs  display_util.rs  lib.rs  managed_test_util.rs
vm/src/api/: blockchain_api_mock.rs  call_value_api_mock.rs  crypto_api_mock.rs  debug_handle_mock.rs  endpoint_arg_api_mock.rs  endpoint_finish_api_mock.rs  error_api_mock.rs  log_api_mock.rs  print_api_mock.rs  send_api_mock.rs  storage_api_mock.rs  vm_api_mock.rs
vm/src/scenario/: README.md
vm/src/tx_execution/: exec_call.rs  exec_contract_endpoint.rs  exec_create.rs  exec_general_tx.rs
vm/src/tx_mock/: tx_async_call_data.rs  tx_cache.rs  tx_cache_balance_util.rs  tx_cache_source.rs  tx_context.rs  tx_input.rs  tx_input_util.rs  tx_log.rs  tx_managed_types.rs
vm/src/world_mock/: account_data.rs  blockchain_mock.rs  blockchain_mock_account_util.rs  blockchain_mock_init.rs  blockchain_mock_scenario_trace.rs  blockchain_tx_info.rs  contract_container.rs  dcdt_instance_metadata.rs
vm/tests/: dcdt_token_payment_test.rs  derive_managed_vec_item_biguint_test.rs  derive_managed_vec_item_dcdt_token_payment_test.rs  derive_managed_vec_item_simple_enum.rs  derive_managed_vec_item_struct_1_test.rs  derive_managed_vec_item_struct_2_test.rs  hex_call_data_arg_load.rs  managed_codec_test.rs  managed_option_test.rs  managed_ref_test.rs  managed_type_debug_test.rs  managed_vec_test.rs  multi_value_encoded_test.rs  sample_adder.rs  static_buffer_ref_test.rs  test_crypto.rs  test_hash_bi_di_mapper.rs  test_hash_map_mapper.rs  test_hash_map_storage_mapper.rs  test_hash_set_mapper.rs  test_hash_unordered_set_mapper.rs  test_linked_list_mapper.rs  test_print_api.rs  test_queue_mapper.rs  test_vec_mapper.rs
(+797 files in other folders)
