[package]
name = "drt-sc"
version = "0.0.1-patch1"
edition = "2021"

authors = ["xfactor@toml <xfactor.toml@gmail.com>", "Sumanth <saisumanthvadla@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/DharitriOne/drt-sdk-rs"
homepage = "https://dharitri.com/"
documentation = "https://docs.dharitri.com/"
description = "Dharitri smart contract API"
keywords = ["dharitri", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies", "development-tools"]

[features]
num-bigint = ["drt-sc-codec/num-bigint"]
alloc = ["drt-sc-codec/alloc"]
ei-unmanaged = ["alloc"]
promises = []
big-float = []
dcdt-token-payment-legacy-decode = []

[dependencies]
hashbrown = "0.13.2"
hex-literal = "0.3.1"
bitflags = "1.3.2"

[dependencies.num-traits]
version = "0.2"
default-features = false

[dependencies.drt-sc-derive]
version = "=0.0.1-patch1"
path = "../derive"

[dependencies.drt-sc-codec]
version = "=0.0.1-patch1"
path = "../codec"
features = ["derive"]
