[package]
name = "drt-sc-codec"
version = "0.0.1-patch1"
edition = "2021"

authors = ["xfactor@toml <xfactor.toml@gmail.com>", "Sumanth <saisumanthvadla@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/DharitriOne/drt-sdk-rs"
homepage = "https://dharitri.com/"
documentation = "https://docs.dharitri.com/"
description = "Lightweight binary serializer/deserializer, written especially for Dharitri smart contracts"
keywords = ["dharitri", "wasm", "webassembly", "blockchain", "contract"]
categories = ["no-std", "wasm", "cryptography::cryptocurrencies", "development-tools"]

[features]
derive = ["drt-sc-codec-derive"]
alloc = []

[dependencies.drt-sc-codec-derive]
path = "../codec-derive"
version = "=0.0.1-patch1"
optional = true

[dependencies]
arrayvec = { version = "0.7.1", default-features = false }
num-bigint = { version = "0.4.2", optional = true } # can only be used in std contexts

[dev-dependencies.drt-sc-codec-derive]
path = "../codec-derive"
version = "=0.0.1-patch1"
