[package]
name = "drt-sc-scenario"
version = "0.0.1-patch1"
edition = "2021"

authors = ["xfactor@toml <xfactor.toml@gmail.com>", "Sumanth <saisumanthvadla@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/DharitriOne/drt-sdk-rs"
homepage = "https://dharitri.com/"
documentation = "https://docs.dharitri.com/"
description = "Dharitri tools for writing and executing scenarios"
keywords = ["dharitri", "blockchain", "contract", "debug"]
categories = ["cryptography::cryptocurrencies", "development-tools::debugging"]

[dependencies]
num-traits = "0.2"
hex = "0.4"
sha2 = "0.10.6"
serde = "1.0"
serde_json = "1.0"
pathdiff = "0.2.1"
itertools = "0.10.3"
colored = "2.0"

[features]
run-go-tests = []

[dependencies.drt-chain-vm]
version = "=0.0.1-patch1"
path = "../../vm"
