[package]
name = "drtpy-snippet-generator"
version = "0.0.0"
authors = ["xfactor@toml <xfactor.toml@gmail.com>", "Sumanth <saisumanthvadla@gmail.com>"]
edition = "2021"
publish = false

[[bin]]
name = "drtpy-snippet-generator"
path = "src/drtpy_snippet_generator.rs"

[dependencies.drt-sc]
version = "0.0.1-patch1"
path = "../../framework/base"

[dependencies]
bech32 = "0.9"
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"
