[package]
name = "multisig"
version = "1.0.0"
authors = ["xfactor@toml <xfactor.toml@gmail.com>", "Sumanth <saisumanthvadla@gmail.com>"]
edition = "2021"
publish = false

[lib]
path = "src/multisig.rs"

[dependencies.drt-sc]
version = "0.0.1-patch1"
path = "../../../framework/base"

[dependencies.drt-sc-modules]
version = "0.0.1-patch1"
path = "../../../contracts/modules"

[dev-dependencies.drt-sc-scenario]
version = "0.0.1-patch1"
path = "../../../framework/scenario"

[dev-dependencies.adder]
path = "../adder"

[dev-dependencies.factorial]
path = "../factorial"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"
