[package]
name = "proxy-pause"
version = "0.0.0"
authors = ["xfactor@toml <xfactor.toml@gmail.com>", "Sumanth <saisumanthvadla@gmail.com>"]
edition = "2021"
publish = false

[lib]
path = "src/proxy_pause.rs"

[dependencies.drt-sc]
version = "0.0.1-patch1"
path = "../../../framework/base"

[dev-dependencies.drt-sc-scenario]
version = "0.0.1-patch1"
path = "../../../framework/scenario"

[dev-dependencies.use-module]
path = "../../feature-tests/use-module"
