[package]
name = "alloc-features"
version = "0.0.0"
authors = ["xfactor@toml <xfactor.toml@gmail.com>", "Sumanth <saisumanthvadla@gmail.com>"]
edition = "2021"
publish = false

[lib]
path = "src/alloc_features_main.rs"

[dependencies.drt-sc]
version = "0.0.1-patch1"
path = "../../../framework/base"
features = ["alloc"]

[dev-dependencies.drt-sc-scenario]
version = "0.0.1-patch1"
path = "../../../framework/scenario"

[dev-dependencies.dcdt-system-sc-mock]
path = "../dcdt-system-sc-mock"
