[package]
name = "basic-features"
version = "0.0.0"
authors = ["xfactor@toml <xfactor.toml@gmail.com>", "Sumanth <saisumanthvadla@gmail.com>"]
edition = "2021"
publish = false

[lib]
path = "src/basic_features_main.rs"

[dependencies.drt-sc]
version = "0.0.1-patch1"
path = "../../../framework/base"

[dev-dependencies.drt-sc-scenario]
version = "0.0.1-patch1"
path = "../../../framework/scenario"

[dependencies.drt-sc-modules]
version = "0.0.1-patch1"
path = "../../../contracts/modules"

[dev-dependencies.dcdt-system-sc-mock]
path = "../dcdt-system-sc-mock"
