[package]
name = "rust-testing-framework-tester"
version = "0.0.0"
authors = ["xfactor@toml <xfactor.toml@gmail.com>", "Sumanth <saisumanthvadla@gmail.com>"]
edition = "2021"
publish = false

[dependencies.drt-sc]
version = "0.0.1-patch1"
path = "../../../framework/base"
features = [ "alloc" ]

[dev-dependencies.adder]
path = "../../examples/adder"

[dev-dependencies.basic-features]
path = "../../feature-tests/basic-features"

[dev-dependencies.drt-sc-scenario]
version = "0.0.1-patch1"
path = "../../../framework/scenario"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"

[dev-dependencies.forwarder]
path = "../composability/forwarder"

[dev-dependencies.vault]
path = "../composability/vault"
