[package]
name = "use-module"
version = "0.0.0"
authors = ["xfactor@toml <xfactor.toml@gmail.com>", "Sumanth <saisumanthvadla@gmail.com>"]
edition = "2021"
publish = false

[lib]
path = "src/use_module.rs"

[dependencies.drt-sc-modules]
version = "0.0.1-patch1"
path = "../../../contracts/modules"

[dependencies.drt-sc]
version = "0.0.1-patch1"
path = "../../../framework/base"
features = [ "alloc" ]

[dev-dependencies.drt-sc-scenario]
version = "0.0.1-patch1"
path = "../../../framework/scenario"

[dev-dependencies.drt-sc-meta]
version = "0.0.1-patch1"
path = "../../../framework/meta"
