[package]
name = "queue-repeat"
version = "0.0.0"
authors = ["xfactor@toml <xfactor.toml@gmail.com>", "Sumanth <saisumanthvadla@gmail.com>"]
edition = "2021"
publish = false

[lib]
path = "src/queue_repeat.rs"

[dependencies.benchmark-common]
path = "../benchmark-common"


[dependencies.drt-sc]
version = "0.0.1-patch1"
path = "../../../../framework/base"

[dev-dependencies.drt-sc-scenario]
version = "0.0.1-patch1"
path = "../../../../framework/scenario"
